<resources>
    <string name="app_name">ANC Media Player</string>
    <string name="ancbutton">ANC</string>
    <string name="phaseTV">Phase: </string>
    <string name="frequencyTV">Frequency: </string>
    <string name="acceptButton">ACCEPT</string>
    <string name="automaticRadio">Automatic</string>
    <string name="stop">STOP</string>
    <string name="WhiteNoiseButton">WHITE NOISE</string>
    <string name="RotatePhase">Automatic Phase Rotation</string>
</resources>